istio/envoyfilter-istioSession.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: lua-filter
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      istio: ingressgateway
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: GATEWAY
      listener:
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
            subFilter:
              name: "envoy.filters.http.router"
    patch:
      operation: INSERT_BEFORE
      value:
       name: envoy.lua
       typed_config:
         "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
         inlineCode: |            
            function envoy_on_response(response_handle)
              function set_cookie_header(rh)
                s = rh:headers():get("Set-Cookie")
                if string.find(s, "istioSession=" ) and not string.find(s, "SameSite") then
                  s = s.."; SameSite=None; Secure"
                end
                return s
              end
              if response_handle:headers():get("Set-Cookie") then
                secure_cookie_header = set_cookie_header(response_handle)
                response_handle:headers():replace("Set-Cookie",secure_cookie_header)
              end
            end
