istio/envoyfilter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: secure-session-cookie-filter
  namespace: istio-system
spec:
  workloadLabels:
    app: myingressgateway
  filters:
    - listenerMatch:
        listenerType: GATEWAY
      filterType: HTTP
      filterName: envoy.lua
      filterConfig:
        inlineCode: |
          function envoy_on_response(response_handle)
            function set_cookie_header(rh)
              s = rh:headers():get("Set-Cookie")
              if string.find(s, "mycookie=" ) and not string.find(s, "SameSite") then
                s = s.."; SameSite=None; Secure"
              end
              return s
            end
            if response_handle:headers():get("Set-Cookie") then
              secure_cookie_header = set_cookie_header(response_handle)
              response_handle:headers():replace("Set-Cookie",secure_cookie_header)
            end
          end```
